# antigravity-proxy

./: .gitignore  README.md
cli/: Cargo.toml  config.example.toml
cli/src/: main.rs
cli/src/cli/: mod.rs
cli/src/cli/commands/: accounts.rs  generate_key.rs  mod.rs  quota.rs  start.rs  status.rs
core/: Cargo.toml
core/src/: account.rs  config.rs  lib.rs  oauth.rs  quota.rs
core/src/proxy/: config.rs  mod.rs  project_resolver.rs  rate_limit.rs  server.rs  session_manager.rs  sticky_config.rs  token_manager.rs
core/src/proxy/common/: mod.rs  model_mapping.rs  utils.rs
core/src/proxy/handlers/: claude.rs  gemini.rs  mod.rs  openai.rs
core/src/proxy/mappers/: gemini_to_openai.rs  mod.rs  openai_to_gemini.rs
core/src/proxy/middleware/: auth.rs  mod.rs
core/src/proxy/upstream/: client.rs  mod.rs
