[package]
name = "antigravity-core"
version = "0.1.0"
edition = "2021"
description = "Core logic for Antigravity - API mappers, auth, and client"
authors = ["Antigravity Contributors"]
license = "CC-BY-NC-SA-4.0"

[dependencies]
# HTTP Client & Server basics
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
dashmap = "6"
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
regex = "1"
once_cell = "1"
pin-project = "1"
base64 = "0.22"
eventsource-stream = "0.2"
sha2 = "0.10"
rand = "0.9.2"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2"
